--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                         <span class="label">Conquistas</span>
                     </div>
                     
-                    <button class="counter" type="button" onclick="window.location.href='index2.html'">
+                    <div class="counter" type="button" onclick="window.location.href='index2.html'">
                         <span class="number">12</span>
                         <span class="label">Cartas recebidas</span>
-                    </button>
+                    </div>
                     
                     <div class="counter" type="button" onclick="window.location.href='index5.html'">
                         <span class="number">64.223</span>
